--- a/client/src/views/BuyNow/BuyNow.css
+++ b/client/src/views/BuyNow/BuyNow.css
@@ -4,15 +4,16 @@
     margin-left: 50px;
 }
 .quantity-text{
-    font-size: 25px;
+    font-size: 20px;
     color: rgb(39, 39, 39);
     font-weight:600;
     display: flex;
 }
 .quantity{
-    font-size: 25px;
+    font-size: 20px;
     font-weight:600;
-    margin:5px 15px ;
+    margin-top: -40px;
+    margin-inline-start:  15px ;
 }
 .delivery-text{
     font-size: 20px;
@@ -46,8 +47,8 @@
     cursor: pointer;
 }
 .img-mobile{
-    height:550px;
-    width: 550px;
+    height:530px;
+    width: 530px;
 }
 .info-taxt{
     width: 600px;
