--- a/client/src/views/Login/Login.css
+++ b/client/src/views/Login/Login.css
@@ -1,13 +1,16 @@
 .login-container{
     width: fit-content;
-    background-color: white;
-    margin: 30px auto;
+    margin:30px auto;
     padding: 20px 50px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px lightgray;
+
 }
 .login-btn{
     display: block;
-    margin: 10px auto;
+    margin: 20px auto;
     width: 150px;
 }
+.link-text{
+    margin-left: 10px;
+    color: blue;
+}
+
