--- a/client/src/views/SignUp/SignUp.css
+++ b/client/src/views/SignUp/SignUp.css
@@ -3,14 +3,15 @@
      margin: 30px auto;
     padding: 10px 50px;
     border-radius: 10px;
-    /* box-shadow: 0px 0px 10px 0px lightgray; */
+    
 }
 .form-sub-container{
     display: flex;
+    
     margin-top: 20px;
 }
 .gender{
-    margin-left: 20px;
+    margin-left: 30px;
 }
 .signup-btn{
     display: block;
@@ -25,16 +26,13 @@
     margin-top: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
-   box-shadow: 0px 0px 10px 2px lightsalmon;
+   box-shadow: 0px 0px 5px 2px lightsalmon;
 }
 .signup-container{
     display: flex;
     /* height:630px; */
     padding-right: 40px;
-    /* width: fit-content; */
     margin-top: 20px;
-
-    /* box-shadow: 0px 0px 10px 2px lightsalmon; */
 }
 .signup-img{
     height: 550px;
@@ -46,4 +44,10 @@
 .title{
     font-size: 28px;
     
+}
+
+@media screen and (max-width:768px){
+    .form-sub-container{
+        flex-direction: column;
+    }
 }
